--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <h2 id="contact" class="contactform">Contact</h2>
 <a href="https://orcid.org/0000-0001-8678-2792" target="_blank">
 <img src="orcid image.jpg" alt="ORCID Logo"/></a>
-<form>
+<form id="contactform" action="https://formspree.io/f/mlezwqen" method="POST">
     <label for="name">*Name:</label>
     <br>
   <input type="text" name="name-text-field" id="name" required>
