--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <br>
   <label for="email">*Email:</label>
     <br>
-  <input type="text" name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+  <input type="text" name="email" id="email">
   <br>
   <br>
   <label for="mobile">Mobile (optional):</label>
