--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <br>
   <label for="mobile">Mobile (optional):</label>
   <br>
-  <input type="tel" name="mobile" id="mobile" pattern=“[0-9] {10,16}”>
+  <input type="tel" name="mobile" id="mobile">
   <br>
   <br>
   <label for="textarea">*Leave your message below:</label>
